--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
@@ -40,7 +40,7 @@
                         </header>
                     </article>
 
-                    <div style="text-align: right;margin-top: -30px;">
+                    <div style="text-align: right;margin-top: -30px;margin-right: -20px">
                         <label  th:each="pagebar : ${contents.pageBar}" style="margin-left: -20px">
 
                             <label th:if="${pagebar} eq ${contents.pageNum}" style="margin-left: 3px;">
