修复二级评论时间显示异常的问题

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
@@ -75,7 +75,7 @@
                                                     <span class="my-pl-con">&nbsp;<span th:utext="${comment1.content}"></span></span>
                                                 </div>
                                                 <div class="date-dz">
-                                                    <span class="date-dz-left pull-left comment-time"><span th:text="${comment.created}"></span></span>
+                                                    <span class="date-dz-left pull-left comment-time"><span th:text="${comment1.created}"></span></span>
                                                     <div class="date-dz-right pull-right comment-pl-block">
                                                         <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left">回复</a>
                                                         <span class="pull-left date-dz-line">|</span>
