修复发布文章后报错的问题

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/category.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/category.html
@@ -234,7 +234,7 @@
                 "mid":$("#mid").val(),
                 "description": $("#url").val(),
                 "name":$("#title").val(),
-                "type":"CLASSIFY"
+                "type":"CATEGORY"
             }
         };
         return pojoInputDTO;
