页面展示优化

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/archive.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/archive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>听雨博客，诚意推荐</title>
+    <title>静心听雨</title>
 </head>
 
 <body class="home blog logged-in admin-bar no-customize-support hfeed at-sticky-sidebar right-sidebar" style="margin-top: 0">
