--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index_new.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index_new.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>听雨博客，诚意推荐</title>
+    <title>静心听雨</title>
 
+    <style>
+        @media (min-width: 767px) {
+            .visible-lg-block {
+                display: block !important;
+            }
+            .haha{
+                float: right; width: 50%;padding-left: 25px;margin-top: -22px;
+            }
+        }
+        @media (max-width: 767px) {
+            .hidden-xs {
+                display: none !important;
+            }
+            .haha{
+                float: right; width: 100%;padding-left: 25px;margin-top: -22px;
+            }
+        }
+    </style>
 
 </head>
 
@@ -21,12 +39,12 @@
             <div id="primary" class="content-area">
                 <main id="main" class="site-main" role="main">
 
-                    <article style="height: 260px" th:each="content : ${contents.data}">
-                        <div class="entry-img" style="height: auto;width:50%;float: left;">
-                            <img th:src="${content.thum}"/>
+                    <article style="min-height: 260px;" th:each="content : ${contents.data}">
+                        <div class="entry-img hidden-xs visible-lg-block" style="height: auto;width:50%;float: left;">
+                            <img class="img-responsive" th:src="${content.thum}"/>
                         </div>
 
-                        <header style="float: right; width: 50%;padding-left: 25px;margin-top: -22px;">
+                        <header class="haha" style="">
                             <h2 class="entry-title" ><a th:href="@{'/index/post/'+${content.cid}}" rel="bookmark"><label style="color: black;" th:text="${content.title}"></label></a></h2>
                             <div class="entry-meta" style="margin-top: -10px">
                                 <span class="poston">Posted on <a rel="bookmark" >
